argo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-example
  namespace: demo
  labels:
    app: httpd-example
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: httpd-example
    app.kubernetes.io/name: apache
spec:
  host: httpd-example-apple.apps.ocp4-dc.virtus.corp
  to:
    kind: Service
    name: httpd-example
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
